# medical_project

./: .env.example  .gitignore  README.md  RUN_LOCAL_WINDOWS.md  pyproject.toml  requirements.txt
configs/data/: indiana.yaml  padchest_gr.yaml
configs/experiments/: exp_01_image_only_localization.yaml  exp_02_image_only_impression.yaml  exp_03_unrelated_rag_localization.yaml  exp_04_unrelated_rag_impression.yaml  exp_05_related_rag_localization.yaml  exp_06_related_rag_impression.yaml  final_rag_vs_no_rag.yaml  textgrad_prompt_optimization.yaml
configs/models/: llava_med.yaml  medgemma.yaml  medgemma_real.yaml  qwen2_5_vl.yaml  qwen35_9b_critic.yaml
docker/: Dockerfile  docker-compose.gpu.yaml
docs/: BHI2026_SUBMISSION_ASSESSMENT_KO.md  PROJECT_FRAMEWORK_PROMPT_KO.md  SERVER_SETUP_KO.md  START_HERE_KO.md  TEXTGRAD_LESION_PRESERVATION_KO.md
scripts/: 00_run_e2e_pipeline.py  01_preprocess_indiana.py  02_create_stratified_split.py  03_build_support_database.py  04_run_baseline_experiments.py  05_run_textgrad_prompt_optimization.py  06_run_rag_ablation.py  07_run_final_rag_experiment.py  08_summarize_results.py  09_create_human_audit_sheet.py  10_merge_chexbert_labels.py  11_export_chexbert_input.py  12_sample_prompt_preservation_ttest.py  13_benchmark_retrieval_encoders.py  15_build_real_iu_from_hf.py  16_run_experiment_sweep.py  17_build_roco_from_hf.py  run_one_click_smoke_and_prompt_check.sh  run_sweep_multigpu.sh  run_sweep_now.sh  run_sweep_when_ready.sh  run_textgrad_then_infer.sh  vrag.py
tests/: test_labeler.py  test_splitter.py
(+79 files in other folders)
