[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "vision-rag-cxr"
version = "0.1.0"
description = "Modular E2E Vision-RAG framework for Indiana University Chest X-ray experiments"
requires-python = ">=3.10"
dependencies = []

[project.scripts]
vrag = "vision_rag_cxr.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
